# AOC2021

./: .gitignore  README.md
DAY1/: CHANGELOG.md  DAY1.cabal  bin
DAY1/app/: Main.hs
DAY1/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
DAY2/: CHANGELOG.md  DAY2.cabal  bin
DAY2/app/: Main.hs
DAY2/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
DAY3/: 2input.txt  CHANGELOG.md  DAY3.cabal  bin
DAY3/app/: Main.hs
DAY3/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
DAY4/: CHANGELOG.md  DAY4.cabal  bin
DAY4/app/: Main.hs
DAY4/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
